# EdgeCache

./: .gitignore  Makefile  README.md  edgecache_blueprint.md
.github/workflows/: cd.yml  ci.yml
analytics-consumer/: Dockerfile  package.json  tsconfig.json
analytics-consumer/src/: config.ts  index.ts  rollup.ts
control-plane/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
control-plane/src/: app.ts  config.ts  index.ts
control-plane/src/db/: migrate.ts  origins.ts  pool.ts  purge.ts  rules.ts  stats.ts
control-plane/src/middleware/: auth.ts
control-plane/src/redis/: coordinator.ts
control-plane/src/routes/: origins.ts  purge.ts  rules.ts  stats.ts
control-plane/test/: auth.test.ts
deploy/: docker-compose.yml
deploy/k8s/: README.md
deploy/k8s/base/: analytics-consumer.yaml  control-plane.yaml  (+9 more)
deploy/observability/: prometheus.yml
docs/: BENCHMARKS.md  DEMO.md  DESIGN_DECISIONS.md  FAILURE_MODES.md  LEARNING_PLAN.md  RUNBOOK.md  api-examples.http
dummy-origin/: Dockerfile  package.json  server.js
proxy/: CMakeLists.txt  Dockerfile
proxy/src/: ProxyServer.cpp  ProxyServer.h  RequestHandler.cpp  RequestHandler.h  main.cpp
proxy/src/analytics/: AccessLog.h  KafkaAccessLogSink.cpp  KafkaAccessLogSink.h
proxy/src/cache/: CacheEntry.h  CacheKey.cpp  CacheKey.h  LRUCache.cpp  LRUCache.h  ShardedCache.cpp  ShardedCache.h
proxy/src/coalesce/: InFlightRegistry.cpp  InFlightRegistry.h
proxy/src/config/: Config.cpp  Config.h
proxy/src/http/: Http.cpp  Http.h
proxy/src/metrics/: MetricsRegistry.cpp  MetricsRegistry.h  MetricsServer.cpp  MetricsServer.h
proxy/src/net/: EventLoop.cpp  EventLoop.h  Listener.cpp  Listener.h
proxy/src/origin/: CircuitBreaker.cpp  CircuitBreaker.h  CircuitBreakerRegistry.h  FakeOriginClient.h  HttpOriginClient.cpp  HttpOriginClient.h  OriginClient.h
proxy/src/policy/: CachePolicy.cpp  CachePolicy.h  RuleOverridePolicy.h
proxy/src/redis/: RedisClient.cpp  RedisClient.h  RedisCoordinator.cpp  RedisCoordinator.h  RedisL2Cache.cpp  RedisL2Cache.h  RuleStore.cpp  RuleStore.h
proxy/test/: test_cache_key.cpp  test_circuit_breaker.cpp  test_coalescing.cpp  test_framework.h  test_http_parse.cpp  test_l2_serialize.cpp  test_lru.cpp  test_main.cpp  test_policy.cpp  test_rule_parse.cpp  test_sharded_cache.cpp
scripts/: seed.sh  smoke.ps1  wsl_build.sh
test/chaos/: kill_origin.sh  kill_redis.sh
test/concurrency/: coalescing.sh
test/integration/: purge_propagation.sh
test/load/: hot-key.lua  zipfian.js
(+4 files in other folders)
